5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1596_2895.log
== TEST (2019-04-02 16:57:34) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input()))
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,  3)
print(a)
-- ERROR:
File "XXXX", line 5
    qtd_litros = float(input()))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:49) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(qnt_de_michael,  3)
NameError: name 'qnt_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:49) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(qnt_de_michael,  3)
NameError: name 'qnt_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:54:49) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.140959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 7, in <module>
    a = round(qnt_de_michael,  3)
NameError: name 'qnt_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:54:50) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.123316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 7, in <module>
    a = round(qnt_de_michael,  3)
NameError: name 'qnt_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:55:20) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(qnt_de_michael,3)
NameError: name 'qnt_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:55:22) 
-- CODE:
# Teste seus codigos aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar
# Nao se intimide com as mensagem de erro

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qnt_de_michael,3)
print(a)
-- EXECUTION TIME:
0.162267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 7, in <module>
    a = round(qnt_de_michael,3)
NameError: name 'qnt_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
